<resources>
    <string name="app_name">controleSe</string>
    <string name="day_button">DIA</string>
    <string name="month_button">MÊS</string>
    <string name="year_button">ANO</string>
    <string name="create_new_transaction">Criar nova transação</string>
    <string name="transaction_statistics_descripition">Estatísticas de transações registradas no aplicativo</string>
    <string name="transaction_total">R$ %1$.2f</string>
    <string name="label_category_pie_chart">Categorias</string>
    <string name="text_category_pie_chart">Divisão dos Gastos</string>

    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_0">0</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_category">%1$s</string>

    <string name="btn_clear">CLEAR</string>
    <string name="btn_del">DEL</string>
    <string name="btn_00">00</string>

    <string name="category_food">Alimentação</string>
    <string name="category_food_icon">🍕</string>

    <string name="category_transport">Transporte</string>
    <string name="category_transport_icon">🚗</string>

    <string name="category_leisure">Lazer</string>
    <string name="category_leisure_icon">🍾</string>

    <string name="category_fixed_expenses">Despesas Fixas</string>
    <string name="category_fixed_expenses_icon">🧾</string>

    <string name="category_extra_costs">Gastos Adicionais</string>
    <string name="category_extra_costs_icon">➕</string>
    <string name="new_cat">New category</string>
    <string name="new_icon">New icon</string>
    <string name="category_choice_invalid">"Selecione uma categoria para continuar"</string>

    <string name="category_choice_description">Defina que categoria será utilizada em Transação</string>
    <string name="category_choice_title">Selecione a Categoria desejada</string>
    <string name="category_button_template">%1$s   %2$s</string>
    <string name="select_category">SELECIONAR CATEGORIA</string>
    <string name="no_category_selected_warning">Por favor, selecione uma categoria!</string>

    <string name="month_january">Jan</string>
    <string name="month_february">Fev</string>
    <string name="month_march">Mar</string>
    <string name="month_april">Abr</string>
    <string name="month_may">Mai</string>
    <string name="month_june">Jun</string>
    <string name="month_july">Jul</string>
    <string name="month_august">Ago</string>
    <string name="month_september">Set</string>
    <string name="month_october">Out</string>
    <string name="month_november">Nov</string>
    <string name="month_december">Dez</string>

    <string name="bar_chart_description_day">Transações em dias do Mês</string>
    <string name="bar_chart_description_month">Transações em meses</string>
    <string name="bar_chart_description_year">Transações ao longo dos anos</string>

    <string name="pie_chart_description_day">Categorias de Transações do Dia</string>
    <string name="pie_chart_description_month">Categorias de Transações do Mês</string>
    <string name="pie_chart_description_year">Categorias de Transações do Ano</string>

</resources>