<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    tools:context=".activities.NewExpenseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newTransactionHeaderLayout"
        android:layout_width="380dp"
        android:layout_height="144dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/newTransactionTotalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_1"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_2"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintTop_toTopOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_3"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        app:layout_constraintTop_toTopOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_4"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_5"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintTop_toTopOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_6"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintTop_toTopOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="375dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_7"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_8"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintTop_toTopOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_9"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintTop_toTopOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#275E83"
        android:text="@string/btn_0"
        android:textAlignment="center"
        android:textSize="34sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_8"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>